--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/stack": "^7.0.5",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.2",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.2.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.4",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -20,12 +33,14 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.3",
-    "@react-native/eslint-config": "0.76.3",
-    "@react-native/metro-config": "0.76.3",
-    "@react-native/typescript-config": "0.76.3",
+    "@react-native/babel-preset": "0.76.2",
+    "@react-native/eslint-config": "0.76.2",
+    "@react-native/metro-config": "0.76.2",
+    "@react-native/typescript-config": "0.76.2",
     "@types/react": "^18.2.6",
+    "@types/react-redux": "^7.1.34",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-thunk": "^2.1.32",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
