--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.5",
     "@reduxjs/toolkit": "^2.3.0",
+    "@stripe/stripe-react-native": "^0.40.0",
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.2",
