--- a/ios/PaymentTransferApp/Info.plist
+++ b/ios/PaymentTransferApp/Info.plist
@@ -20,6 +20,8 @@
     <string>Octicons.ttf</string>
     <string>Zocial.ttf</string>
   </array>
+  <key>NSFaceIDUsageDescription</key>
+  <string>Enabling Face ID allows you quick and secure access to your account.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
