--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.5",
     "@reduxjs/toolkit": "^2.3.0",
     "@stripe/stripe-react-native": "^0.40.0",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
+    "install": "^0.13.0",
+    "moment": "^2.30.1",
+    "npm": "^10.9.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-biometrics": "^3.0.1",
